
key searching stuff.  still need to hook in primary api interface

-------------------------------------------------------------------------------

Mon Dec 13 16:45:32 PST 1999
(Mandrake)

key searching should work now.  eConfigGetKeys()


-------------------------------------------------------------------------------

Wed Dec 15 12:59:25 PST 1999
(Mandrake)

minor bugfix

-------------------------------------------------------------------------------

Wed Dec 15 18:10:31 PST 1999
(Mandrake)

fixed a minor bug in the keys searcher.

-------------------------------------------------------------------------------

Thu Dec 16 18:33:41 PST 1999
(Mandrake)

another test commit

-------------------------------------------------------------------------------

Thu Dec 16 18:42:29 PST 1999
(Mandrake)

testing yet again.

-------------------------------------------------------------------------------

Thu Dec 16 18:54:18 PST 1999
(Mandrake)

another test commit.

-------------------------------------------------------------------------------

Fri Dec 17 15:28:19 PST 1999
(Mandrake)

hmm.  forgot to not include "dirty" fat entries.

-------------------------------------------------------------------------------

Fri Dec 17 16:22:22 PST 1999
(Mandrake)

fixed minor bug

-------------------------------------------------------------------------------

Sun Dec 19 12:31:29 PST 1999
(Mandrake)

right.  fixed a couple of stupid errors.

-------------------------------------------------------------------------------

Sun Dec 19 13:01:15 PST 1999
(Mandrake)

added skeleton code for file locking (need to do that today) as well as
finishing the fsck code.

-------------------------------------------------------------------------------

Mon Dec 20 15:23:52 PST 1999
(Mandrake)

right.  bringing CVS up to date so I can do this from work.

-------------------------------------------------------------------------------

Mon Dec 20 16:31:55 PST 1999
(Mandrake)

about half of fsck is done.