@@ -15,7 +15,7 @@
 #include "eConfig.internal.h"
 #include "eConfig.h"
 
-unsigned long 
+unsigned long
 _econf_finddatapointerinpath(char *path, char *loc,
 			     unsigned long *position,
 			     unsigned long *timestamp)
@@ -176,7 +176,7 @@ _econf_get_data_from_disk(char *loc, unsigned long *length)
 
 }
 
-unsigned long 
+unsigned long
 _econf_append_data_to_disk_at_path(char *path, unsigned long length, void *data)
 {
    /* This function is pretty simplistic.  it just saves out a bit of *data to
@@ -226,7 +226,7 @@ _econf_append_data_to_disk_at_path(char *path, unsigned long length, void *data)
    return 0;
 }
 
-int 
+int
 _econf_save_data_to_disk_at_position(unsigned long position, char *path,
 				     unsigned long length, void *data)
 {
@@ -274,7 +274,7 @@ _econf_save_data_to_disk_at_position(unsigned long position, char *path,
 
 }
 
-int 
+int
 _econf_new_fat_entry_to_disk(char *loc, unsigned long position,
 			     unsigned long length, char *path)
 {
@@ -325,7 +325,7 @@ _econf_new_fat_entry_to_disk(char *loc, unsigned long position,
 
 }
 
-int 
+int
 _econf_replace_fat_entry_to_disk(char *loc, unsigned long position,
 				 unsigned long length, char *path)
 {
@@ -388,7 +388,7 @@ _econf_replace_fat_entry_to_disk(char *loc, unsigned long position,
    return 0;
 }
 
-int 
+int
 _econf_save_data_to_disk(void *data, char *loc, unsigned long length,
 			 char *path)
 {
@@ -493,7 +493,7 @@ _econf_save_data_to_disk(void *data, char *loc, unsigned long length,
 
 }
 
-int 
+int
 _econf_purge_data_from_disk_at_path(char *loc, char *path)
 {
 
@@ -556,7 +556,7 @@ _econf_purge_data_from_disk_at_path(char *loc, char *path)
 
 }
 
-int 
+int
 _econf_purge_data_from_disk(char *loc)
 {
 
@@ -608,7 +608,7 @@ _econf_purge_data_from_disk(char *loc)
 
 }
 
-int 
+int
 _econf_create_new_data_repository(char *path)
 {
 
