@@ -44,3 +44,33 @@ _econf_lock_path(char *path)
    return 1;
 
 }
+
+int
+_econf_unlock_path(char *path)
+{
+
+   /* This function is supposed to lock a theme at the specified location
+    * *path.  It is not exported by the library.  returns a 0 on failure and
+    * a 1 on success.
+    * This function will wait until the lock is attainable, and then lock
+    * the path, and check to make sure he was the one who locked it.  Once
+    * this lock is obtained, the function returns.  until then it sleeps.
+    */
+
+   char                lockpath[FILEPATH_LEN_MAX];
+   FILE               *LOCKFILE;
+
+   if (!path)
+      return 0;
+
+   sprintf(lockpath, "%s/lock", path);
+   if ((LOCKFILE = fopen(lockpath, "r")))
+     {
+	while (!feof(LOCKFILE))
+	  {
+	  }
+	fclose(LOCKFILE);
+     }
+   return 1;
+
+}
