@@ -159,3 +159,10 @@ Mon Dec 20 16:31:55 PST 1999
 (Mandrake)
 
 about half of fsck is done.
+
+-------------------------------------------------------------------------------
+
+Mon Dec 20 16:32:58 PST 1999
+(Mandrake)
+
+added new internal function
